<resources>
    <string name="app_name">Coffee Place</string>
    <string name="pedidoConfirmado">Tu pedido estará listo dentro de 15 minutos.</string>
    <string name="email">Correo electrónico</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="nombre">Nombre completo</string>
    <string name="password">Contraseña</string>
    <string name="retypepassword">Confirmar contraseña</string>
    <string name="passwordOlvidado">Recuperar Contraseña</string>
    <string name="telefono">Número de teléfono</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registro">REGISTRO</string>
    <string name="registrarse">Registrarse</string>
    <string name="registroRedesSociales">También puedes registrarte con</string>
    <string name="terminos">He leído y estoy de acuerdo con los términos y condiciones.</string>
    <string name="footer">© 2023 CoffeePlace. Todos los derechos reservados.</string>
    <string name="inicio">Inicio</string>
    <string name="pedido">Pedido</string>
    <string name="promos">Promos</string>
    <string name="promociones">Promociones</string>
    <string name="perfil">Perfil</string>
    <string name="cumpleanos">Cumpleaños</string>
    <string name="noticias">Noticias</string>
    <string name="guardar">GUARDAR</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="verTodo">Ver Todo</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="comboUADY">Nuevo Combo UADY</string>
    <string name="comboUADYTexto">¡Descubre el combo perfecto para satisfacer tus antojos! Te presentamos el nuevo e irresistible CaféProfe acompañado de un delicioso croissant para afrontar el fin de semestre.</string>
    <string name="comboUMT">Nuevo Combo UMT</string>
    <string name="comboUMTTexto">Para los amantes del desayuno tradicional ya está disponible el nuevo combo UMT. Unos deliciosos Hot Cakes acompañados de unos ricos huevos estrellados con tocino y fruta.</string>
    <string name="comboJaguar">Nuevo Combo Jaguar</string>
    <string name="comboJaguarTexto">Con el combo Jaguar podrás disfrutar de una comida sana y deliciosa con la cual podrás de una rica ensalada acompañada de papas a la francesa como postre y un delicioso café.</string>
    <string name="comboProfesor">Nuevo Combo Profesor</string>
    <string name="comboProfesorTexto">El combo Profesor te permitirá desestresarte de la rutina con un rico sandwich con carne de res y un delicioso cafè que te darà las energìas suficiente para continuar el día.</string>
    <string name="editarFotoPerfil">EDITAR FOTO DE PERFIL</string>
    <string name="textoPedidoNoExistente">En este momento no cuentas con una orden. Para realizar un pedido visita nuestra sección de promociones.</string>
    <string name="textoPedidoUno">¿Estás seguro de realizar este pedido? Presiona el botón para confirmar.
        Costo $65</string>
    <string name="confirmarPedido">Confirmar</string>

    <string name="comboUnoPromociones">Delicioso Café Frío + Croissant</string>
    <string name="comboUnoPromocionesPrecio">$65</string>
    <string name="comboDosPromociones">Rica Hamburguesa + Trozos de piña</string>
    <string name="comboDosPromocionesPrecio">$70</string>
    <string name="comboTresPromociones">Rebanada de pastel + café al gusto</string>
    <string name="comboTresPromocionesPrecio">$45</string>
    <string name="comboCuatroPromociones">Hot Cakes + huevos estrellados + tocino + fruta</string>
    <string name="comboCuatroPromocionesPrecio">$70</string>
    <string name="comboCincoPromociones">Caja de Postres</string>
    <string name="comboCincoPromocionesPrecio">$80</string>
    <string name="comboSeisPromociones">Deliciosa Ensalada + Aderezos</string>
    <string name="comboSeisPromocionesPrecio">$50</string>
    <string name="comboSietePromociones">Sandwich con carne de res + Malteada</string>
    <string name="comboSietePromocionesPrecio">$85</string>
</resources>